--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,5 +1,5 @@
 .page__body {
   margin: 0;
-  font-family: Roboto, serif;
-  color: $main-color;
+  font-family: Roboto, sans-serif;
+  color: $main-text-color;
 }
