--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,5 +1,5 @@
 $blue-accent-color: #00acdc;
-$main-color: #060b35;
+$main-text-color: #060b35;
 $secondary-color: #616070;
 $card-width: 200px;
 $primary-lineheight: 18px;
